--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                     <button onclick="searchSong()" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
+            <!-- Display error -->
+            <div id="show-error" class="text-center">
+
+            </div>
             <!-- Single Lyrics -->
-            <div class="single-lyrics text-center">
+            <div id="song-lyrics" class="single-lyrics text-center">
                 
             </div>
             <div id="song-container" class="search-result col-md-8 mx-auto py-4">
